Проверил работоспособность. Исправил sql code на добавление таблиц в бд

--- a/DB.config
+++ b/DB.config
@@ -6,7 +6,7 @@
     </startup>
     <appSettings>
         <connectionStrings>
-            <add name="DB" connectionString="server=127.0.0.1; uid=root; pwd=12345;"/>
+            <add name="DB" connectionString="localhost; uid=root; pwd=12345;"/>
         </connectionStrings>
     </appSettings>
 </configuration>
