--- a/Properties/App.config
+++ b/Properties/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <connectionStrings>
-        <add name="DB" connectionString="server=127.0.0.1; uid=root; pwd=12345;" />
+        <add name="DB" connectionString="server=127.0.0.1; uid=root; pwd=12345; database=diagramrooms;" />
     </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
