--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,9 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="MySql.Data" version="8.2.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NLog" version="5.3.4" targetFramework="net48" />
+  <package id="NLog.Config" version="4.7.15" targetFramework="net48" />
+  <package id="NLog.Schema" version="5.3.4" targetFramework="net48" />
   <package id="S7netplus" version="0.20.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net48" />
