--- a/Diagram.csproj
+++ b/Diagram.csproj
@@ -132,6 +132,8 @@
     <Compile Include="Forms\ZedGraphPosition.cs" />
     <Compile Include="Forms\ZedGraphPositionDto.cs" />
     <Compile Include="Graph.cs" />
+    <Compile Include="Models\DataPoints.cs" />
+    <Compile Include="Models\Graph.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\SampleDiagram.cs">
@@ -185,7 +187,6 @@
     <Folder Include="Application\" />
     <Folder Include="DataAccess\" />
     <Folder Include="DependencyInjection\" />
-    <Folder Include="Models\" />
     <Folder Include="Services\" />
     <Folder Include="Views\" />
   </ItemGroup>
