--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,10 @@
   <package id="Autofac" version="8.2.1" targetFramework="net48" />
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.21.9" targetFramework="net48" />
+  <package id="HarfBuzzSharp" version="7.3.0.3" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.Linux" version="7.3.0.3" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.macOS" version="7.3.0.3" targetFramework="net48" />
+  <package id="HarfBuzzSharp.NativeAssets.Win32" version="7.3.0.3" targetFramework="net48" />
   <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net48" />
@@ -12,15 +16,28 @@
   <package id="NLog" version="5.3.4" targetFramework="net48" />
   <package id="NLog.Config" version="4.7.15" targetFramework="net48" />
   <package id="NLog.Schema" version="5.3.4" targetFramework="net48" />
+  <package id="OpenTK" version="3.1.0" targetFramework="net48" />
+  <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net48" />
   <package id="S7netplus" version="0.20.0" targetFramework="net48" />
+  <package id="ScottPlot" version="5.0.55" targetFramework="net48" />
+  <package id="ScottPlot.WinForms" version="5.0.55" targetFramework="net48" />
+  <package id="SkiaSharp" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.HarfBuzz" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Linux.NoDependencies" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.Views.Desktop.Common" version="2.88.9" targetFramework="net48" />
+  <package id="SkiaSharp.Views.WindowsForms" version="2.88.9" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="4.7.3" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net48" />
   <package id="ZstdSharp.Port" version="0.7.1" targetFramework="net48" />
 </packages>
