Сделал класс для проверка находиться ли элемент визуально в поле зрения пользователя

--- a/Diagram.csproj
+++ b/Diagram.csproj
@@ -162,6 +162,7 @@
     <Compile Include="DependencyInjection\ContainerConfig.cs" />
     <Compile Include="DTO\GraphDataPointDTO.cs" />
     <Compile Include="ExceptionData\ExceptionRepository.cs" />
+    <Compile Include="Extensions\ControlExtensions.cs" />
     <Compile Include="Interfaces\IMainForm.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Views\MainForm.cs">
